# Haven

./: .env.example  ARCHITECTURE_REPORT.md  AUDIT_REPORT.md  AUTH_SETUP.md  BUILD_COMMANDS.md  CHANGELOG.md  DATABASE_REPORT.md  DEPLOYMENT_CHECKLIST.md  ENV_SETUP.md  HAVEN.md  MIGRATION_REPORT.md  MOBILE_DESKTOP_INSTRUCTIONS.md  PERFORMANCE_REPORT.md  PLUGIN_DEV_GUIDE.md  PWA_REPORT.md  QA_REPORT.md  README.md  REALTIME_REPORT.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY_REPORT.md  capacitor.config.ts  docker-compose.tor.yml  drizzle.config.ts  index.html  local.db  metadata.json  package-lock.json  package.json  server.ts
.github/workflows/: build-android.yml  build-desktop.yml  build.yml  ci.yml  compile.yml  db-backup.yml  main.yml  release.yml
public/: manifest.json  robots.txt  sitemap.xml  sw.js
scripts/: backup-db.sh
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: ArtifactStudio.tsx  CommunitySection.tsx  HavenAI.tsx  HavenMarketplace.tsx  HomeDashboard.tsx  IDEModule.tsx  IntegratesWithEcosystem.tsx  PersonalSpaces.tsx  PluginDiscovery.tsx  PluginEngine.tsx  UnifiedApiHub.tsx
src/db/: schema.ts
src/hooks/: useAbly.ts  useAuth.ts  useReputationSystem.ts
src/lib/: PluginManager.ts  ablyClient.ts  checksum.ts
src/pages/: AdminDashboard.tsx  CommunityPage.tsx  DocsPage.tsx  DownloadPage.tsx  HomePage.tsx  IntegrationsPage.tsx  LandingPage.tsx  LoginPage.tsx  NotFoundPage.tsx  OnboardingPage.tsx  PricingPage.tsx  ProfilePage.tsx  ProjectPage.tsx  ProjectsPage.tsx  (+3 more)
worker/: wrangler.toml
(+32 files in other folders)
