[package]
name = "haven"
version = "0.1.0"
description = "Haven Sovereign Workspace Network"
authors = ["dzlab"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
